solution mobile text issue (#114)
* video and learnathon content added

* video and learnathon content added

* solution video added

* solution video added

* solution mobile text issue

* header chagnes banner layout change

* header chagnes banner layout change

---------

--- a/src/app/tenant/sunbird/css/custom.css
+++ b/src/app/tenant/sunbird/css/custom.css
@@ -20,6 +20,7 @@
 .slick-slide{
     margin: 0 28px;
 }
+
 header{
     position: fixed;
     top: 0;
@@ -1162,6 +1163,9 @@ h1, h2, h3, h4, h5,
 .d-flex-jc-around{
     justify-content: space-around;
 }
+.justify-content-center{
+    justify-content: center !important;
+}
 .footer a{
     color: #fff !important;
     text-decoration: none;
@@ -1562,7 +1566,7 @@ section img{
 }
 .learn-btn{
     display: inline-block;
-    padding: 17px 50px;
+    padding: 17px 24px;
     background: #990000;
     text-decoration: none;
     color: #fff;
@@ -2008,6 +2012,21 @@ section img{
 .learnathon-video{
     width: 90%;
 }
+.ml-20{
+    margin-left: 20px !important;
+}
+.ml-5{
+    margin-left: 5px !important;
+}
+.learn-padding{
+    background: #990000;
+    text-decoration: none;
+    color: #fff;
+    font-weight: 700;
+    font-size: 12px;
+    padding: 6px 29px !important;
+    margin: 10px 0;
+}
 
 @media (max-width:1081px) {
     .learn-section{
@@ -2113,6 +2132,7 @@ section img{
     .learnathon-video{
         width: 90%;
     }
+   
 
 }
 @media (max-width:769px) {
@@ -2198,8 +2218,30 @@ section img{
     .nav-header-theme{
         padding: 0px !important;
     }
+    /* .learn-padding{
+        position: absolute;
+        right: 46%;
+        top: 72px;
+        background: #990000;
+        text-decoration: none;
+        color: #fff;
+        font-weight: 700;
+        font-size: 12px;
+        padding: 6px 29px !important;
+    } */
 }
 @media (max-width:550px) {
+    .learn-container{
+        display: flex;
+        flex-direction: column-reverse !important;
+        align-items: center;
+    }
+    .solution-video{
+        width: 85%;
+    }
+    .title-top-margin{
+        margin-top: 77px !important;
+    }
     .nav-header{
         flex-direction: column;
     }
